LOVE MY DEAR COUSIN. WAITING FOR MARRIAGE...MUST MARRY HIM AS SOON AS POSSIBLE~~

--- a/et5.org
+++ b/et5.org
@@ -2047,12 +2047,13 @@ public static class ActorHandleHelper {
   - 返回G2C_LoginGate{response.PlayerId = player.Id;}
 - 7）返回Unity-LoginHelper.Login
   - 发出EventType.LoginFinish事件
-** 进入Map逻辑服流程：这个改天再看吧【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
+** 进入Map逻辑服流程：【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
+- 这个模块，因为自已之前前一个游戏里所有用到的只止于与【注册登录服】打交道，所以，这个登录【地图服】的逻辑从来不曾真正看过。只看了前一两个类，活宝妹的重构项目暂时还没有用到，不想看，改天再看。
 - 1）Unity-EnterMapHelper.EnterMapAsync
-  - 发送C2G_EnterMap
+  - 发送C2G_EnterMap, 这样一条消息 
 - 2）Server-C2G_EnterMapHandler
   - 根据session的SessionPlayerComponent保存的PlayerId获取Player
-  - 在Gate上动态创建一个Map Scene
+  - 在Gate上动态创建一个Map Scene. 【亲爱的表哥的活宝妹的理解】：是在【客户端】所连接的这个【网关服】，网关服所在的进程中，多开一条线程（？动态添加一个SceneType.Map 场景。活宝妹认为一个进程中动态多添加一个场景小服，是一个进程中动态多开一条线程的过程！）
   - 把Unit从DB中加载放进来（此处是在动态创建的GateMap上创建一个Unit，对Unit进行初始化和组件附加，没有涉及DB）
   - 返回G2C_EnterMap{response.MyId = player.Id}
   - 使用TransferHelper.Transfer把unit从在Gate上动态创建一个Map Scene上，传送到Map1
@@ -2066,6 +2067,7 @@ public static class ActorHandleHelper {
   - 组装Unit，附加应有的组件
   - 发送M2C_CreateMyUnit，将Unit及其组件上的信息转化为OuterMessage.UnitInfo，发送给客户端
   - 返回M2M_UnitTransferResponse
+- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
 - 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
 - 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
 - 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
