--- a/et4.org
+++ b/et4.org
@@ -1622,7 +1622,10 @@ Root.Instance.Scene.AddComponent<NetInnerComponent, IPEndPoint>(NetworkHelper.To
 - 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
 - 【今天早上】：先去读一个帮助工具类程序集：从Json 配置文件 .txt 里（前两天参考网络上的，ET7 重构后，服务端启动的配置是记在 .txt 里）读取配置，并怎么记录到配置文件的过程。感觉不去深入理解【服务端启动过程中】的每个细节，都感觉服务端的启动没读懂。可是，这块儿不知道从哪里下口。。。
 - 我以为我把其它所有的编译错误，几乎全改完了（除了那个 channelId 不知道是怎么回事儿。。。）现在还在一个个往外冒，说统统把它们消灭掉好了。。。
-- *【VS 里两三个文件，每天下午的重复】* ：就没有搞明白，到底是VS 里的延迟，还是他们贱恶作贱活宝妹VS 账户的结果。连续多少天，每天下午那两个文件都要再改一遍。真它妈的发疯犯贱！活宝妹嫁给亲爱的表哥了吗？亲爱的表哥的活宝妹，被他们的贱鸡、贱畜牲折磨致死了吗？都还没有，他们就没有资格对亲爱的表哥的活宝妹发疯犯贱！！！爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！
+- *【VS 里两三个文件，每天下午的重复】* ：就没有搞明白，到底是VS 里的延迟，还是他们贱恶作贱活宝妹VS 账户的结果。连续多少天，每天下午那两个文件都要再改一遍。真它妈的发疯犯贱！活宝妹嫁给亲爱的表哥了吗？亲爱的表哥的活宝妹，被他们的贱鸡、贱畜牲折磨致死了吗？都还没有，他们就没有资格对亲爱的表哥的活宝妹发疯犯贱！！！爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！今天晚上是真的把那些该删除的几个文件真正清理干净了吗？不要明天下午，亲爱的表哥的活宝妹再来运行，今天的工作，明天又要重篂遍！！！【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
+  
+[[./pic/et4_20230815_220857.png]]
+- 明天上午看ModelView 与HotfixView: 感觉这两个程序域从来不知道是怎么回事，也没有项目要用到他们。但是现在的编译错误就出在视图相关。并且重构项目会用到这些。【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】  
 - 今天下午的错误里，有几个对GamerComponent 对 HotfixView 层里的抛错。以前还不曾经细看过  ModelView 与HotfixView. 以后会把这两个域捡起来。【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
 - 现在知道 channelId 大概是在什么上下文的时候生成的（当网络客户端连接上网络服务端，被服务端 OnAcceptComplete() 回调回来的时候，就建立一个信道， channelId 成为信道标记号）。但是不知道，它是怎么用的。它可能需要一个如同其它管理类一样的字典来一一记住连接过的信道，但框架里好像是 AddChildWithId() 作为子组件、子控件的形式添加的。所以，这里糊的地方就是：管理类怎么用它，想要某个小服地址的时候，如何拿到那个小服的地址，如何建立起通信会话框的？去框架里找。我搜索什么，有什么线索，才能从框架里找出类似的用法？ *这个 channelId, 实际上也是物理机上的进程号 fromProcess. 这里，自己迷迷糊糊的地方是： fromProcess 是否等同于，StartProcessConfig 里的 sceneId?*
 - 理一下框架里几大主要服的大致功能与连接的话：客户端最初登录时，（客户端连注册登录服的过程是：客户端不是使用的【动态路由系统】吗？让路由器建立了两个连注册登录服与网关服的会话框）【注册登录服】先与网关服连接 *（这个细节去看一下，注册登录服如何连接网关服的？【注册登录服】作为小服，走内网路线 NetInnerComponent，发【跨不跨进程，没关系】消息（ActorMessageSenderComponent.Instance.Call(...)）给网关服）* ，为客户端分配和拿到一个客户端与网关服连接的Key;【网关服】有与其所管理的各【客户端】的【会话框】；可以试着去找：网关服走内网组件，与其它各小服的通信会话框等的情况【这里不用再找，因为 *同注册登录服一样，走内网路线，发消息就是了。所以网关服，既要内网组件，与内网其它服收发消息，也要服务端组件NetServerComponent，用于转发收转客户端消息* 】。
