LOVE MY DEAR COUSIN. WAITING FOR MARRIAGE...MUST MARRY HIM AS SOON AS POSSIBLE

--- a/et4.org
+++ b/et4.org
@@ -1625,6 +1625,8 @@ Root.Instance.Scene.AddComponent<NetInnerComponent, IPEndPoint>(NetworkHelper.To
 - *【VS 里两三个文件，每天下午的重复】* ：就没有搞明白，到底是VS 里的延迟，还是他们贱恶作贱活宝妹VS 账户的结果。连续多少天，每天下午那两个文件都要再改一遍。真它妈的发疯犯贱！活宝妹嫁给亲爱的表哥了吗？亲爱的表哥的活宝妹，被他们的贱鸡、贱畜牲折磨致死了吗？都还没有，他们就没有资格对亲爱的表哥的活宝妹发疯犯贱！！！爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！今天晚上是真的把那些该删除的几个文件真正清理干净了吗？不要明天下午，亲爱的表哥的活宝妹再来运行，今天的工作，明天又要重篂遍！！！【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
   
 [[./pic/et4_20230815_220857.png]]
+- 三个文件，终于再找到了一个因为是 emacsclient 的保存文件到磁盘的延迟所造成的抛锚错误。消除掉LocaitonOneXX 类所引起的编译错误。现在算是把这个问题清理彻底解决了。可是重启一次VS, 这个被他们一再恶意作贱的编译错误【说他们的贱鸡、贱畜牲们故意，是因为所有其它错误都能消除，就仅有这一个该死的会一再被他们恶意弄出来恶心人】就又会崩出来，真它妈的恶心死人不偿命！！！活宝妹现在真是怀疑他们乌龟王八蛋的作贱活宝妹的VS 帐户了。活宝妹嫁给亲爱的表哥了吗？活宝妹被他们的贱鸡、贱畜牲折磨致死了吗？都还没有，他们就永远不必发疯犯贱！！！活宝妹还没能领到活宝妹同亲爱的表哥的结婚证，活宝妹就永远也不可能离开亲爱的表哥的身边半步！！爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！
+- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】那今天晚上就把台式机先放一边，去看【参考项目】里那两个模块的编译错误：Unity.HotfixView 里的 AEvent 和SceneType 参数的标明。
 - 明天上午看ModelView 与HotfixView: 感觉这两个程序域从来不知道是怎么回事，也没有项目要用到他们。但是现在的编译错误就出在视图相关。并且重构项目会用到这些。【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】  
 - 今天下午的错误里，有几个对GamerComponent 对 HotfixView 层里的抛错。以前还不曾经细看过  ModelView 与HotfixView. 以后会把这两个域捡起来。【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
 - 现在知道 channelId 大概是在什么上下文的时候生成的（当网络客户端连接上网络服务端，被服务端 OnAcceptComplete() 回调回来的时候，就建立一个信道， channelId 成为信道标记号）。但是不知道，它是怎么用的。它可能需要一个如同其它管理类一样的字典来一一记住连接过的信道，但框架里好像是 AddChildWithId() 作为子组件、子控件的形式添加的。所以，这里糊的地方就是：管理类怎么用它，想要某个小服地址的时候，如何拿到那个小服的地址，如何建立起通信会话框的？去框架里找。我搜索什么，有什么线索，才能从框架里找出类似的用法？ *这个 channelId, 实际上也是物理机上的进程号 fromProcess. 这里，自己迷迷糊糊的地方是： fromProcess 是否等同于，StartProcessConfig 里的 sceneId?*
@@ -1633,10 +1635,6 @@ Root.Instance.Scene.AddComponent<NetInnerComponent, IPEndPoint>(NetworkHelper.To
   - 【注册登录服】【网关服】：一看就是一个例了呀，前几天亲爱的表哥的活宝妹，一定是被大半夜满街跑的破摩托车们给吵疯了。。。昨天写得还不对。分内网与客户端分别处理。如果是【客户端】，网关服如亲爱的表哥之于活宝妹，是客户端的全权代理，网关服负责代理客户端的消息，发往客户端想要发往的各小服；如果是内网其它小服，就是【跨不跨进程，没关系】的内网路线，发跨或是不跨进程的消息呀。【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
 - 【现修改的最后一个模块的问题：】不知道小服之间如何拿地址，或是建立会话框【 *可以不跨进程* ，就是同台物理机、同进程的其它小服场景； *可以跨进程* ，是同一台物理机其它核进程，或是其它物理机的某核进程，走的都是 *内网组件发、或跨、或不跨，进程的消息* 】，就是下面的例子，内网路线，通过接收消息的进程号，内网组件，发向那个进程（或说那个进程的 actorId?）就可以了。参看下面的例子。
   - ActorHandleHelper.cs: 里，NetInnerComponent.Instance.Get(fromProcess) 只要用进程号调用，就可以拿到会话框。所以，这里的提示是：我需要去找那些个小服所在的进程号【这里应该是，框架里底层Actor 机制的功能作用单位， *同一进程上，有同一个 actorId?* 同一进程，以IP 地址与端口唯一标识的话，同一进程上的多线程，各线程各小服，以SceneId 相区分？那么我上面的 fromProcess 可能不一定对。要去检查确认一下】. 现在是就按找到的这个提示，把最后一点儿编译错误改了。笔记本上改的。提交上去，台式机是会运行一下看看还会崩出哪些编译错误？至此感觉改完了。【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
-- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
-- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
-- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
-- 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
 - 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
 - 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
 - 【爱表哥，爱生活！！！任何时候，亲爱的表哥的活宝妹就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】
