LOVE MY DEAR COUSIN. WAITING FOR MARRIAGE...MUST MARRY HIM AS SOON AS POSSIBLE~~

--- a/readme.org
+++ b/readme.org
@@ -104,6 +104,7 @@
 - 亲爱的表哥的活宝妹，今天上午、下午、一天的时间，终于 *【看见、意识到了：诸多 git 分支中，先前存在的、一团混乱的、commit 提交的、问题】* 亲爱的表哥的活宝妹，笨宝妹，终于 *可以弄一个原始 master 版本的，真正运行通，在Mac OS 上运行通，终于【亲爱的表哥的活宝妹、笨宝妹，弄电脑1 年后，终于】有Macbook 可以运行得通、可以随时 debug 的编译、运行环境了* 。折腾的时间有点儿长，从上午到傍晚一个工作日，但 *亲爱的表哥的活宝妹、笨宝妹，这1 天玩玩乐乐地过去，取得了过去1 年、亲爱的表哥的活宝妹自己、不曾有过的进展！* 亲爱的表哥的活宝妹，这，或许是、应该是 *【寒假三个周、列计划重点时】亲爱的表哥的活宝妹、自己曾经猜测、预估过，【女大自巧】秋季一个学期之后、伏蛰一段时间没碰项目之后，亲爱的表哥的活宝妹，应该能够、拥有的长足进步吧！可喜可获！* 
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - 有一个 *【可编译、可运行的Macbook 随身行、项目运行环境后】* ，亲爱的表哥的活宝妹，就应该更专注、快速地解决掉现在分支 Tractor 里存在的 1000 多个编译错误的问题，把项目真正运行、进展起来。几个主要应用：VSC VS 与Emacs 间的相互跳转，基本解决。以后晚上就运行项目了。
+- *【VSC 不能加载Unity 工程】* ：加载极慢，永远 Loading. 还需要解决这个问题。不知道，亲爱的表哥的活宝妹，昨天是不是看错了，误把VS 当VSC 了。VSC 本来是，亲爱的表哥的活宝妹，最喜欢用的 IDE, 可是因为现在它不能狠好地加载 Unity 里的几个工程，感觉，给亲爱的表哥的活宝妹，带来了无限麻烦。弄了一上午，暂时只能将就现在的配置，将就着先读会儿源码了。
 - *【Unity 客户端、编译错误、清除】*: 现在，Unity 客户端，因亲爱的表哥的活宝妹先前不懂，随便瞎改、来适配一个【双扣】游戏项目，里面有太多编译错误。这个 *Unity 客户端的所有编译错误，需要首先清除掉。*
 
 
