LOVE MY DEAR COUSIN. WAITING FOR MARRIAGE...MUST MARRY HIM AS SOON AS POSSIBLE~~

--- a/et6.org
+++ b/et6.org
@@ -7,8 +7,15 @@
 * 进展日志【完成、基本完成了的部分】
 - *【HybridCLRSettings 类】* ：报错找不到。去掉2 处使用。因为项目没用，什么 HybridCLRSettings.Instance.XX
 - *【现在、修改进展、模块】* ：Google.ProtoBuf 消息里面关于 enum 的消息相关的问题。【TODO】：
+- 昨天，写了狠久的 *【ET 框架：单线程多进程】* 设计的优点与缺点，哪里去了？这个东西，还需要再多想几遍【TODO】：
+- 不知道框架里，小项目Tools 可执行文件 ./Bin/Tool 是怎么生成的。要从源码里找出来。先去从大的方面看，几大程序域的启动与联系。
 
 * 现在进行时、进展
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - 当进入UILobby 的时候，要把前面的 UILogin 删除。应该是有逻辑，只是因为我现在的【BUG：】，后面就座地执行的逻辑中断了
@@ -17,6 +24,11 @@
 - 有一个 *【可编译、可运行的Macbook 随身行、项目运行环境后】* ，亲爱的表哥的活宝妹，就应该更专注、快速地解决掉现在分支 Tractor 里存在的 1000 多个编译错误的问题，把项目真正运行、进展起来。几个主要应用：VSC VS 与Emacs 间的相互跳转，基本解决。以后晚上就运行项目了。
 - *【VSC 不能加载Unity 工程】* ：加载极慢，永远 Loading. 还需要解决这个问题。不知道，亲爱的表哥的活宝妹，昨天是不是看错了，误把VS 当VSC 了。VSC 本来是，亲爱的表哥的活宝妹，最喜欢用的 IDE, 可是因为现在它不能狠好地加载 Unity 里的几个工程，感觉，给亲爱的表哥的活宝妹，带来了无限麻烦。弄了一上午，暂时只能将就现在的配置，将就着先读会儿源码了。
   - *【TODO】* ：这里，可能晚上等，相对无限困顿的时候，还会想要折腾，怎么才能让VSC 如同先前，可以完美跳转到各种定义里去？
-  - *【TODO】* ：记得昨天？前天？亲爱的表哥的活宝妹的 emacs 还比较聪明， sr-speedbar 可以自动跳转到文件对应的目录下，展示目录里的文件内容；怎么今天亲爱的表哥的活宝妹的 emacs 就变傻了？
-- 【3/31】：上午，继续读昨天晚上、看一半的、网络模块，再弄懂读懂一部分。
+  - *【TODO】* ：记得昨天？前天？亲爱的表哥的活宝妹的 emacs 还比较聪明， sr-speedbar 可以自动跳转到文件对应的目录下，展示目录里的文件内容；怎么今天亲爱的表哥的活宝妹的 emacs 就变傻了？这里最开始不动 emacs 的话是可以的。就是亲爱的表哥的活宝妹自己的 sr-speedbar 的配置里，有点儿问题，改天去 debug 一下。
+- 【4/3】：上午，上午继续读源码。真正读懂、源码中先前不懂的过程，感觉还是比较有收获；下午和晚上，试运动与修改重构项目里的一些1100 个编译问题。上午午餐前再快速扫一遍【协程锁组件】相关。把这个模块快速看一遍。
+   - 这个编译问题，狠显然，先前亲爱的表哥的活宝妹还不太懂得 Model/ModelView 与Hotfix/HotfixView 的亲爱的表哥的活宝妹，没能弄清楚如安卓MVVM 数据驱动视图变化等发布订阅者模式。不该为修改1100 个诸多的编译问题而看项目。应该去把重构项目的四大域的关系理清楚，如写、重构项目般，自己把源码事理好了，1100 个编译错误是能够狠快解决掉大半的。
+   - ETTask 里有不懂的、网络模块里有不懂的。不具体到某块。自己就先试理清楚四大程序域里的设计、逻辑关系。过程中不懂的、可以翻一遍源码。
 - *【Unity 客户端、编译错误、清除】*: 现在，Unity 客户端，因亲爱的表哥的活宝妹先前不懂，随便瞎改、来适配一个【双扣】游戏项目，里面有太多编译错误。这个 *Unity 客户端的所有编译错误，需要首先清除掉。*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
