LOVE MY DEAR COUSIN. WAITING FOR MARRIAGE...MUST MARRY HIM AS SOON AS POSSIBLE~~

--- a/et6.org
+++ b/et6.org
@@ -10,6 +10,21 @@
 - 昨天，写了狠久的 *【ET 框架：单线程多进程】* 设计的优点与缺点，哪里去了？这个东西，还需要再多想几遍【TODO】：
 - 不知道框架里，小项目Tools 可执行文件 ./Bin/Tool 是怎么生成的。要从源码里找出来。先去从大的方面看，几大程序域的启动与联系。
 
+* 【双端、任何一端启动过程】：因为不懂，读过也可能会忘，先一点点记下现在的理解 
+- 【服务端】四大类的启动相关配置：【Machine, Process, Scene, Zone】，ExcelExporter 套用 Template.txt, 每个类的 ProtoBuf-Contract都实现 IMerge, *绝对有【跨进程消息传递？】来合并多个不同服务端配置的过程。服务端的配置信息，是合并了的，序列化到文件* 【TODO】：去找，服务端的配置，是怎么到客户端的？
+- 【ConfigComponent】组件添加：LoadAsync() 调用后，双端任何一端，借ET 事件系统的过程，下午解决掉！
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+
+* 【ET7 框架：现在的不懂的模块、细节，小本本记下】
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- 框架里，ProtoBuf 模块的初始化里，某个 *clone() 函数的 Serize()/Desieze()* 亲爱的表哥的活宝妹，觉得有个飘渺逻辑没读懂。本质与Protobuf 的序列化与反序列化无关【2 个函数本身不藏雷、没有飘渺逻辑】，去找 *ExcelExport 里IMerge 接口相关* ，来理解，双端启动时，不同服务器、服务端、客户端的配置信息等，是如何跨进程传递的？
+- 框架里几大程序域的如MVVM 般？事件机制交互，如Model 与ModelView, Hotfit 与Hotfix/HotfixView 事件，找几个用例看懂。才能更好地适配双升游戏项目。
+- 1 个细节： *【去找，客户端，第1 次登录，直连 Realm 登录服时，客户端是如何知道，自己要发送的 Realm 登录服的、IP 地址的？】* 记得好像是写在，客户端的某个 Excel 配置文件下？似懂非懂，要自己再找一遍，加深印象和理解。也包括：ConfigeComponent 相关的， *【客户端的，几个服务端的配置文件，是怎么来的？】*
+- ConfigComponent: 双端各端的启动，细节，亲爱的表哥的活宝妹，先前走马观花、还有狠多没能理解的细节。
+- *【客户端】"Assets/Bundles/Config" 资源包目录下的"Config.unity3d" 资源包* ：去框架里找：这个资源包，怎么配置，生成资源包、中转热更新资源包服务器、下载到客户端的？
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+
 * 现在进行时、进展
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
@@ -29,6 +44,8 @@
    - 这个编译问题，狠显然，先前亲爱的表哥的活宝妹还不太懂得 Model/ModelView 与Hotfix/HotfixView 的亲爱的表哥的活宝妹，没能弄清楚如安卓MVVM 数据驱动视图变化等发布订阅者模式。不该为修改1100 个诸多的编译问题而看项目。应该去把重构项目的四大域的关系理清楚，如写、重构项目般，自己把源码事理好了，1100 个编译错误是能够狠快解决掉大半的。
    - ETTask 里有不懂的、网络模块里有不懂的。不具体到某块。自己就先试理清楚四大程序域里的设计、逻辑关系。过程中不懂的、可以翻一遍源码。
 - *【Unity 客户端、编译错误、清除】*: 现在，Unity 客户端，因亲爱的表哥的活宝妹先前不懂，随便瞎改、来适配一个【双扣】游戏项目，里面有太多编译错误。这个 *Unity 客户端的所有编译错误，需要首先清除掉。*
+- 上午：再看1 小时源码，尽可能多地找出不懂的地方：可以是ETTask 自定义协程封装的底层原理、网络模块相关等。下午接着改四大程序域里，重构游戏项目的适配问题，把几大域的MVVM? 订阅发布模式理解透彻。【上午2.5 小时到 11:27am 吃午餐】：ConfigCompoent 里，客户端的Invoke Config 标签逻辑，还不懂。亲爱的表哥的活宝妹，上次花海量时间没看懂，今天上午再看 2.5 小时，翻一遍这个组件，看能够看懂和理解多少。 *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】* 
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
