LOVE MY DEAR COUSIN. WAITING FOR MARRIAGE...MUST MARRY HIM AS SOON AS POSSIBLE~~

--- a/et6.org
+++ b/et6.org
@@ -12,7 +12,7 @@
 
 * 【双端、任何一端启动过程】：因为不懂，读过也可能会忘，先一点点记下现在的理解 
 - 【服务端】四大类的启动相关配置：【Machine, Process, Scene, Zone】，ExcelExporter 套用 Template.txt, 每个类的 ProtoBuf-Contract都实现 IMerge, *绝对有【跨进程消息传递？】来合并多个不同服务端配置的过程。服务端的配置信息，是合并了的，序列化到文件* 【TODO】：去找，服务端的配置，是怎么到客户端的？
-- 【ConfigComponent】组件添加：LoadAsync() 调用后，双端任何一端，借ET 事件系统的过程，下午解决掉！
+- 【ConfigComponent】组件添加：LoadAsync() 调用后，双端任何一端，借ET 事件系统的过程【狠简单，只是一个函数细节，事件机制里获得所有BaseAttribute 的子类，包含了 ConfigAttribute 和 InvokeAttribute】。
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 
@@ -24,27 +24,34 @@
 - ConfigComponent: 双端各端的启动，细节，亲爱的表哥的活宝妹，先前走马观花、还有狠多没能理解的细节。
 - *【客户端】"Assets/Bundles/Config" 资源包目录下的"Config.unity3d" 资源包* ：去框架里找：这个资源包，怎么配置，生成资源包、中转热更新资源包服务器、下载到客户端的？
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 
 * 现在进行时、进展
-- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
-- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
-- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
-- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
-- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
-- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - 当进入UILobby 的时候，要把前面的 UILogin 删除。应该是有逻辑，只是因为我现在的【BUG：】，后面就座地执行的逻辑中断了
 - 亲爱的表哥的活宝妹，今天上午、下午、一天的时间，终于 *【看见、意识到了：诸多 git 分支中，先前存在的、一团混乱的、commit 提交的、问题】* 亲爱的表哥的活宝妹，笨宝妹，终于 *可以弄一个原始 master 版本的，真正运行通，在Mac OS 上运行通，终于【亲爱的表哥的活宝妹、笨宝妹，弄电脑1 年后，终于】有Macbook 可以运行得通、可以随时 debug 的编译、运行环境了* 。折腾的时间有点儿长，从上午到傍晚一个工作日，但 *亲爱的表哥的活宝妹、笨宝妹，这1 天玩玩乐乐地过去，取得了过去1 年、亲爱的表哥的活宝妹自己、不曾有过的进展！* 亲爱的表哥的活宝妹，这，或许是、应该是 *【寒假三个周、列计划重点时】亲爱的表哥的活宝妹、自己曾经猜测、预估过，【女大自巧】秋季一个学期之后、伏蛰一段时间没碰项目之后，亲爱的表哥的活宝妹，应该能够、拥有的长足进步吧！可喜可获！* 
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - 有一个 *【可编译、可运行的Macbook 随身行、项目运行环境后】* ，亲爱的表哥的活宝妹，就应该更专注、快速地解决掉现在分支 Tractor 里存在的 1000 多个编译错误的问题，把项目真正运行、进展起来。几个主要应用：VSC VS 与Emacs 间的相互跳转，基本解决。以后晚上就运行项目了。
-- *【VSC 不能加载Unity 工程】* ：加载极慢，永远 Loading. 还需要解决这个问题。不知道，亲爱的表哥的活宝妹，昨天是不是看错了，误把VS 当VSC 了。VSC 本来是，亲爱的表哥的活宝妹，最喜欢用的 IDE, 可是因为现在它不能狠好地加载 Unity 里的几个工程，感觉，给亲爱的表哥的活宝妹，带来了无限麻烦。弄了一上午，暂时只能将就现在的配置，将就着先读会儿源码了。
+- *【VSC 不能加载Unity 工程】* ：加载极慢，永远 Loading. 还需要解决这个问题。不知道，亲爱的表哥的活宝妹，昨天是不是看错了，误把VS 当VSC 了。VSC 本来是，亲爱的表哥的活宝妹，最喜欢用的 IDE, 可是因为现在它不能狠好地加载 Unity 里的几个工程，感觉，给亲爱的表哥的活宝妹，带来了无限麻烦。弄了一上午，暂时只能将就现在的配置，将就着先读会儿源码了。晚上，先试着解决这个问题。源码不能自由跳转，就不好用
   - *【TODO】* ：这里，可能晚上等，相对无限困顿的时候，还会想要折腾，怎么才能让VSC 如同先前，可以完美跳转到各种定义里去？
   - *【TODO】* ：记得昨天？前天？亲爱的表哥的活宝妹的 emacs 还比较聪明， sr-speedbar 可以自动跳转到文件对应的目录下，展示目录里的文件内容；怎么今天亲爱的表哥的活宝妹的 emacs 就变傻了？这里最开始不动 emacs 的话是可以的。就是亲爱的表哥的活宝妹自己的 sr-speedbar 的配置里，有点儿问题，改天去 debug 一下。
 - 【4/3】：上午，上午继续读源码。真正读懂、源码中先前不懂的过程，感觉还是比较有收获；下午和晚上，试运动与修改重构项目里的一些1100 个编译问题。上午午餐前再快速扫一遍【协程锁组件】相关。把这个模块快速看一遍。
    - 这个编译问题，狠显然，先前亲爱的表哥的活宝妹还不太懂得 Model/ModelView 与Hotfix/HotfixView 的亲爱的表哥的活宝妹，没能弄清楚如安卓MVVM 数据驱动视图变化等发布订阅者模式。不该为修改1100 个诸多的编译问题而看项目。应该去把重构项目的四大域的关系理清楚，如写、重构项目般，自己把源码事理好了，1100 个编译错误是能够狠快解决掉大半的。
    - ETTask 里有不懂的、网络模块里有不懂的。不具体到某块。自己就先试理清楚四大程序域里的设计、逻辑关系。过程中不懂的、可以翻一遍源码。
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】* 
 - *【Unity 客户端、编译错误、清除】*: 现在，Unity 客户端，因亲爱的表哥的活宝妹先前不懂，随便瞎改、来适配一个【双扣】游戏项目，里面有太多编译错误。这个 *Unity 客户端的所有编译错误，需要首先清除掉。*
-- 上午：再看1 小时源码，尽可能多地找出不懂的地方：可以是ETTask 自定义协程封装的底层原理、网络模块相关等。下午接着改四大程序域里，重构游戏项目的适配问题，把几大域的MVVM? 订阅发布模式理解透彻。【上午2.5 小时到 11:27am 吃午餐】：ConfigCompoent 里，客户端的Invoke Config 标签逻辑，还不懂。亲爱的表哥的活宝妹，上次花海量时间没看懂，今天上午再看 2.5 小时，翻一遍这个组件，看能够看懂和理解多少。 *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】* 
+- 上午：再看1 小时源码，尽可能多地找出不懂的地方：可以是ETTask 自定义协程封装的底层原理、网络模块相关等。 *亲爱的表哥的活宝妹，今天早上的鸡蛋葫萝卜真养眼睛【看字变大变粗壮】！* 上午能够理解一点儿网络上搜索到的原理是好的；更需要多读源码，真正读懂。再看1 小时源码。 *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- 今天看Actor 消息相关，感觉都看懂了——满满收获都看懂了、绝大部分都看懂了！。今天要出去玩儿了，今天晚上或是明天上午再接着看。 
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- 改天：下午接着改四大程序域里，重构游戏项目的适配问题，把几大域的MVVM? 订阅发布模式理解透彻。 *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- 亲爱的表哥的活宝妹自己的重构项目，还是要去修改和运行。前段时间是实在没能好好学习。。带着需要解决的问题疑问，来看框架和源码，都比只读的好。
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】* 
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
