--- a/et6.org
+++ b/et6.org
@@ -16,7 +16,17 @@
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 
-* 【ET7 框架：现在的不懂的模块、细节，小本本记下】
+* 【网络模块】：收发消息的，不同层次结构上的顺序总结 
+- 亲爱的表哥的活宝妹，上次想找两个序列图来着。载一下
+- TCP 发送消息：
+  
+[[./pic/et6_20240416_131411.png]]
+- TCP 收消息： 
+  
+[[./pic/et6_20240416_131450.png]]
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+
+* 【Et 框架：现在的不懂的模块、细节，小本本记下】
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - 框架里，ProtoBuf 模块的初始化里，某个 *clone() 函数的 Serize()/Desieze()* 亲爱的表哥的活宝妹，觉得有个飘渺逻辑没读懂。本质与Protobuf 的序列化与反序列化无关【2 个函数本身不藏雷、没有飘渺逻辑】，去找 *ExcelExport 里IMerge 接口相关* ，来理解，双端启动时，不同服务器、服务端、客户端的配置信息等，是如何跨进程传递的？
 - 框架里几大程序域的如MVVM 般？事件机制交互，如Model 与ModelView, Hotfit 与Hotfix/HotfixView 事件，找几个用例看懂。才能更好地适配双升游戏项目。
@@ -48,7 +58,11 @@
 - 亲爱的表哥的活宝妹自己的重构项目，还是要去修改和运行。前段时间是实在没能好好学习。。带着需要解决的问题疑问，来看框架和源码，都比只读的好。
 - 【4/15】：今天的亲爱的表哥的活宝妹，被亲爱的表哥的活宝妹住处的、破烂猪皮肥肉、千斤器嚣鼎、万斤秤砣之流的死肥猪、猪八戒、贱鸡、贱畜牲、极端奸佞太监 gay 世界最贱恶存在的贱鸡、贱畜牲，冻感冒生病了。亲爱的表哥的活宝妹，上次为防感冒，接近四十块的手表都没回去找；过几天亲爱的表哥的活宝妹体力缓和过来，再回去找找不到丢了。它——破烂猪皮肥肉、千斤器嚣鼎、万斤秤砣之流的死肥猪、猪八戒、贱鸡、贱畜牲、极端奸佞太监 gay 即刻滚去死、出门就被雷劈死！！
 - *亲爱的表哥的活宝妹，今天早上喝了极多热汤；今天，多喝热水、尽快缓和过来，避开极度恶劣人造灾难。* 它——极端奸佞太监 gay 真贱！妓女禽兽的后代、有娘养无娘指教的世界最底层贱渣、世界最贱恶存在的贱鸡、贱畜牲！它——破烂猪皮肥肉、千斤器嚣鼎、万斤秤砣之流的死肥猪、猪八戒、贱鸡、贱畜牲、极端奸佞太监 gay 即刻滚去死、出门就被雷劈死！！
-- 【4/15】：上午，读2 小时源码。看看，今天头痛——如妈妈生前最后一场、夺命感冒般，左太阳穴痛的亲爱的表哥的活宝妹，2 小时能够读懂多少。 *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- 【4/15】：上午，读2 小时源码。看看，今天头痛——如妈妈生前最后一场、夺命感冒般，左太阳穴痛的亲爱的表哥的活宝妹，2 天来，哪怕下午傍晚、早上来学校，天气还算暖和的时候，也因被冻得直流鼻水！被亲爱的表哥的活宝妹住处的、破烂猪皮肥肉、千斤器嚣鼎、万斤秤砣之流的死肥猪、猪八戒、贱鸡、贱畜牲、极端奸佞太监 gay 杀人猪、故意、恶意、整夜整夜大开 living-room 玻璃门燥音干扰亲爱的表哥的活宝妹的休息，与恶意夜间低温冻首当其冲的亲爱的表哥的活宝妹的房间，贱恶杀人，想要把亲爱的表哥的活宝妹肾脏衰竭冻出人命！它真贱，即刻滚去死、出门就被雷劈死！！
+- *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+- 前几天、停了 *三天完全不动，三天不动，亲爱的表哥的活宝妹，就死掉一半，感觉真恐怖！* 昨天晚上、连续第二天的高强度跳绳运动后，血液总算最终能够流通到、亲爱的表哥的活宝妹的十个手指尖、赶走那些疯涨的菌类！所以亲爱的表哥的活宝妹不能不动、任何时候每天都要动一动！ *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+-  *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
+-  *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】* 
 - *【亲爱的表哥的活宝妹，任何时候，亲爱的表哥的活宝妹，就是一定要、一定会嫁给活宝妹的亲爱的表哥！！！爱表哥，爱生活！！！】*
